feat: implement stock update functionality and enhance product filtering options